--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -2,11 +2,19 @@ nav {
     height: 80px;
     width: 100%;
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     align-items: center;
     box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.1);
     padding: 0 10%;
     font-family: "Teko", sans-serif;
+}
+
+.logo-name {
+    font-size: 1.5rem;
+    color: blueviolet;
+    font-weight: 600;
+    /* margin-right: 40px; */
+    margin-left: 0;
 }
 
 .link {
